# async_io_with_asio_and_coro

./: CMakeLists.txt  README.md  conanfile.txt
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/dir/: CMakeLists.txt
common/dir/include/dir/: Monitor.hpp
common/exe/: CMakeLists.txt  StopService.hpp
common/exe/include/exe/: Exe.hpp  Types.hpp
common/gst/: CMakeLists.txt
common/gst/include/gst/: Camera.hpp  Pipeline.hpp  Recorder.hpp
common/net/: CMakeLists.txt
common/net/include/net/: ClientEndpoint.hpp  ServerEndpoint.hpp
common/po/: CMakeLists.txt
common/po/include/po/: ProgramOptions.hpp
server/: CMakeLists.txt  main.cpp
server/ui/: Events.hpp  ServerWindow.cpp  ServerWindow.hpp
